--- a/20200705.md
+++ b/20200705.md
@@ -1,7 +1,13 @@
-## 리액트에서 컴포넌트 인식이 안 되는 에러
+# 리액트에서 컴포넌트 인식이 안 되는 에러
 
-컴포넌트 이름 첫 글자를 소문자로 시작했더니 컴파일은 성공하지만 그 컴포넌트는 전혀 인식하지 못했다. 
+1. 문제점
 
+컴파일은 성공하지만 어떤 컴포넌트는 전혀 인식하지 못했다. 
+
+2. 시도
+ 
 먼저 컴포넌트 내에서 props, state 등 다른 문법이 틀렸나 체크했지만 틀린 점이 없었다. 
 
-그러나 컴포넌트 이름을 대문자로 시작하게 고치니 컴포넌트가 인식이 되어 브라우저에 출력되었다.
+3. 해결책
+  
+그러나 컴포넌트 이름이 소문자로 시작하는 것을 발견하고 대문자로 고치니 컴포넌트가 인식이 되어 브라우저에 출력되었다.
