--- a/vue/20201017.md
+++ b/vue/20201017.md
@@ -1,15 +1,14 @@
 # Vue 
 ## 출처
- - 유튜브 코지 코더 채널 [뷰js 2 (vuejs 2) 기초 익히기 기본 강좌] 
+유튜브 코지 코더 채널 [뷰js 2 (vuejs 2) 기초 익히기 기본 강좌] 
 
 ## 학습 내용
 1. 뷰 인스턴스 생성
-        
+
         <body>
             <div id="app">
                 {{person.name}} {{person.age}}
-                <br>
-            
+                <br>  
             </div>
             <script>
                 new Vue({
@@ -27,5 +26,226 @@
                 })
             </script>
         </body>
-        
+    
 
+2. 뷰 데이터와 메서드
+ 
+        
+        <div id="app">
+            {{ nextYear() }}
+            <br>
+            {{ nextYearGreeting('안녕하세요') }}
+            <br>
+      
+        </div>
+        <script>
+            new Vue({
+                el:'#app',
+                data:{
+                    person: {
+                        name:'코지 코더',
+                        age:33
+                    },
+                },
+    
+                methods:{
+                    nextYear:function(){
+                        return this.person.name +'는 내년에 '+(this.person.age+1)+'살이 된다';
+                    },
+                    //윗 함수처럼 function 적어도 되고 아래가 축약형이다
+                    nextYearGreeting(greeting){
+                        return greeting+'! '+this.person.name+'는 내년에 '+(this.person.age+1)    +'살이 된다';
+                    },
+                    otherMethod:function(){
+                        this.nextYear();
+                    }
+                }
+            })
+        </script>
+
+3. 데이터 바인딩
+   
+
+        <div id="app">
+             <input type="text"> <br>
+             <input type="text" value="hello"> <br>
+             <input v-bind:type="text" v-bind:value="inputData"> <br>
+             <input :type="type" :value="inputNumbers"><br>
+             <a :href="link">유튜브 링크</a> <br>
+             <a :href="getCozyCoderLink('/kossiecoder')">유튜브 링크</a> <br>
+        </div>
+        <script>
+            new Vue({
+                el:'#app',
+                data:{
+                    person: {
+                        name:'cozy coder',
+                        age:33
+                    },
+                    inputData:'hello world',  
+                    type:'number',
+                    inputNumbers:'Input numbers',  
+                    link:"https://www.youtube.com",        
+                },
+    
+                methods:{
+                    nextYear: function(greeting){
+                        return greeting+'! '+this.person.name+' 는 내년에'+(this.person.age+1)    +'살입니다';
+                    },
+                    otherMethod:function(){
+                        this.nextYear();
+                    },
+                    getCozyCoderLink(channel){
+                        return this.link+channel;
+                    }
+                }
+            })
+        </script>
+
+4. 이벤트
+            
+            <div id="app">      
+                <button onclick="alert('이벤트 바인딩 없는 이벤트')">이벤트 바인딩 없다</button><br>
+                <button v-on:click="alert2">이벤트 바인딩한 버튼</button><br>
+                {{year}} <br>
+                <button v-on:click="add">add</button>
+                <button v-on:click="substract">substract</button><br>
+                <h3>엔터 키 치면 alert 뜨는 input</h3>
+                <input v-on:keyup.enter="alert2">
+                <h3>form 제출</h3>
+                <form v-on:submit.prevent="submit">
+                    <input type="text">
+                    <!-- 아래 input은 form 내부에 있기 때문에 엔터 치면 form이 제출되어서 alert가 두 개 뜬다 -->
+                    <input @keyup.enter="alert2">
+                    <button type="submit">submit</button>
+                </form>
+            </div>
+
+        <script>
+            new Vue({
+                el:"#app",
+                data:{
+                    year:2020,
+                },
+                methods:{
+                    alert2(){
+                        alert('이벤트 바인딩한 이벤트');
+                    },
+                    add(){
+                        this.year++;
+                    },
+                    substract(){
+                        this.year--;
+                    },
+                    submit(){
+                        alert('submitted');
+                        console.log('submitted');
+                    }
+                }
+            })
+        </script>
+
+5. 양방향 바인딩
+
+        <div id="app">
+    
+            <h3>form 제출</h3>
+            <form v-on:submit.prevent="submit">
+                <h3>함수 적용한 이벤트 바인딩</h3>
+                <input type="text" :value="text" @keyup="updateText"><br>
+                {{text}} <br>
+                <h3>이것은 함수가 필요없는 양방향 바인딩</h3>
+                <input type="text" v-model="text2">
+                {{text2}} <br>
+                <button type="submit">submit</button>
+            </form>
+        </div>
+        <script>
+            new Vue({
+                el:"#app",
+                data:{
+                    year:2020,
+                    text:'text',
+                    text2:'text2',
+                },
+                methods:{
+                    alert2(){
+                        alert('이벤트 바인딩한 이벤트');
+                    },
+                    add(){
+                        this.year++;
+                    },
+                    substract(){
+                        this.year--;
+                    },
+                    submit(){
+                        alert('submitted');
+                        console.log('submitted');
+                    },
+                    updateText(event){
+                        this.text=event.target.value;
+                    }
+                }
+            })
+        </script>
+
+
+6. computed
+   
+        <div id="app">
+            <button @click="changeMessage">Click</button>
+            {{reversedMessage}}
+            {{reversedMessage}}
+            {{reversedMessage}}
+        </div>
+        <script>
+            new Vue({
+                el:'#app',
+                data:{
+                    message:'헬로우',
+                },
+                methods:{
+                    changeMessage(){
+                        this.message='코지코더';
+                    }
+                },
+                computed:{
+                    reversedMessage(){
+                        return this.message.split('').reverse().join('');
+                    }
+                }
+            })
+        </script>
+
+7. watch
+   
+        <div id="app">
+            {{message}} <br>
+            <button @click="changeMessage">Click</button><br>
+            {{updated}}
+        </div>
+        <script>
+            new Vue({
+                el:'#app',
+                data:{
+                    message:'hello',
+                    updated:'no'
+                },
+                methods:{
+                    changeMessage(){
+                        this.message='cozy coder';
+                    }
+                },
+                computed:{
+                    reversedMessage(){
+                        return this.message.split('').reverse().join('');
+                    }
+                },
+                watch:{
+                    message(newVal,oldVal){
+                        console.log(newVal,oldVal);
+                        this.updated='what';
+                    }
+                }
+            })
+        </script>
