--- a/vue/20201017.md
+++ b/vue/20201017.md
@@ -1,9 +1,9 @@
-# Vue 
+# Vue 1-7강
 ## 출처
 유튜브 코지 코더 채널 [뷰js 2 (vuejs 2) 기초 익히기 기본 강좌] 
 
 ## 학습 내용
-1. 뷰 인스턴스 생성
+1강 뷰 인스턴스 생성
 
         <body>
             <div id="app">
@@ -28,7 +28,7 @@
         </body>
     
 
-2. 뷰 데이터와 메서드
+2강 뷰 데이터와 메서드
  
         
         <div id="app">
@@ -63,7 +63,7 @@
             })
         </script>
 
-3. 데이터 바인딩
+3강 데이터 바인딩
    
 
         <div id="app">
@@ -102,7 +102,7 @@
             })
         </script>
 
-4. 이벤트
+4강 이벤트
             
             <div id="app">      
                 <button onclick="alert('이벤트 바인딩 없는 이벤트')">이벤트 바인딩 없다</button><br>
@@ -145,7 +145,7 @@
             })
         </script>
 
-5. 양방향 바인딩
+5강 양방향 바인딩
 
         <div id="app">
     
@@ -190,7 +190,7 @@
         </script>
 
 
-6. computed
+6강 computed
    
         <div id="app">
             <button @click="changeMessage">Click</button>
@@ -217,7 +217,7 @@
             })
         </script>
 
-7. watch
+7강 watch
    
         <div id="app">
             {{message}} <br>
